--- a/ZadaniaP/Zadanie1/Makefile
+++ b/ZadaniaP/Zadanie1/Makefile
@@ -8,5 +8,8 @@ all: $(TARGET)
 $(TARGET): $(SRC)
 	$(CXX) $(CXXFLAGS) $(SRC) -o $(TARGET)
 
+%.o: %.cpp
+	$(CXX) $(CXXFLAGS) -c $< -o $@
+
 clean:
-	rm -f $(TARGET)
+	rm -f $(OBJ) $(TARGET)
